# dojo_datastructures

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ClassEstudiantes.py  Menu.py  README.md  __dojo__.py  async_iterador_estadisticas_edades.py  config.ini  csv_management.py  data.csv  ejercicio.py  estudiantes.py  exercise.py  funciones.py  functions.py  iterable_ciudades.py  iterador_promedio_edades.py  main.py  pyproject.toml  report.py  requirements.txt  run-autopep8.cmd  run-flake8.cmd  run-pylint.cmd  run.cmd  students_city.csv  students_country.csv  utils.py
Reportes/: Ciudad(es)_con_mayor_variedad_de_carreras.csv  Ciudades_de_residencia.csv  Edad_promedio_por_carrera.csv  Estadisticas_de_edades_global.csv  Estadisticas_de_edades_por_carrera.csv  Estudiantes_arriba_debajo_edad_promedio.csv  Estudiantes_por_ciudad_(Bogotá).csv  Estudiantes_por_país_(México).csv  Estudiantes_por_rango_de_edad(27-40).csv  Estudiantes_por_rango_de_edad.csv
analysis/: analysis.py
core/: decorators.py  exceptions.py  logging_config.py
media/: Carreras_ciudad_0.6347874818485834.csv  Ciudades_0.492623901475819.csv  Edad_promedio_0.8337680429085862.csv  Edad_promedio_total_0.9636737587600104.csv  Estudiantes_30_0.437891687246021.csv  Estudiantes_de_Mexico_0.49189304956755453.csv  Rango_edad_0.5257424409144537.csv
pmvcp/: __main__.py  __version__.py  pmvcp.py
processing/: __init__.py  student.py  utils.py
reports/: Edad promedio por carrera.txt  __init__.py  alumnos por ciudad.txt  alumnos por pais.txt  alumnos por rango de edad de 10a {final}.txt  alumnos por rango de edad.txt  (+10 more)
(+54 files in other folders)
