[tool.poetry]
name = "dojo-datastructures"
version = "0.1.0"
description = ""
authors = ["Jairo Salazar <jairos1301@gmail.com>"]
readme = "README.md"
packages = [{include = "dojo_datastructures"}]

[tool.poetry.dependencies]
python = "3.8.5"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
